# sola

./: .gitattributes  .gitignore  .ignore  Dockerfile  README.md  analysis_options.yaml  bugs.txt  build.sh  docker-compose.yml  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release-assets.yml
android/app/: build.gradle.kts
assets/: language_subtags.json  translations.json
design/sola/: README.md
design/sola/project/: .design-canvas.state.json  .thumbnail  index.html
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
legacy/data/repositories/: bible_repository.dart  embedding_repository.dart  search_repository.dart  (+1 more)
lib/: README_ARCHITECTURE.md  main.dart
lib/app/: app_bootstrap.dart  app_dependencies.dart  app_routes.dart
lib/core/: error.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: .gitignore  .metadata  Cargo.toml  README.md  ffigen.yaml  pubspec.yaml  test.usfm  tmp.txt
rust/android/: build.gradle
rust/android/src/main/: AndroidManifest.xml
rust/cargokit/build_tool/: analysis_options.yaml
rust/ios/: rust.podspec
rust/lib/: rust.dart  rust_bindings_generated.dart
rust/linux/: CMakeLists.txt
rust/macos/: rust.podspec
rust/macos/Classes/: rust.c
rust/src/: CMakeLists.txt  error.rs  ffi.rs  layout.rs  lib.rs  main.rs  new.rs  painter.rs  rust.c  rust.h  search.h  search.rs  words.rs
rust/src/layout/: tests.rs
rust/src/painter/: format.rs  layout.rs  paint.rs  renderer.rs  writer.rs
rust/src/painter/layout/: artefact.rs  column.rs  container.rs  fragment.rs  inline.rs  line_breaker.rs  mod.rs  paragraph.rs  pipeline.rs  scaffold.rs  state.rs  template.rs
rust/src/painter/paint/: book.rs  character.rs  cross_ref.rs  element.rs  footnote.rs  note_element.rs  paragraph.rs  poetry.rs
rust/tests/: layout.rs
rust/windows/: CMakeLists.txt
scripts/: enrich_bcp47.py
web/: index.html
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+117 files in other folders)
